2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.8 ===

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* gobject.c: Remove (now) unnecessary cases from g_atomic_int_get 
	calls.

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.7 ===

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

2009-01-02  Behdad Esfahbod  <behdad@gnome.org>

	Bug 565136 – Gobject's "notify" signal parameters are wrong in gtk-doc
	Patch from  Andrzej Zaborowski

	* gobject.c (g_object_do_class_init): Fix param order in docs.

2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.3 ===

2008-12-12  Dan Winship  <danw@gnome.org>

	* pltcheck.sh: make this work on x86_64

2008-12-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 473150 – g_type_module_use inconsistently increases the use
	counter in case of error

	* gtypemodule.c (g_type_module_use): Always reset the use count
	to its previous value before returning FALSE. Pointed out by
	Johan Billien.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559456 – GObject Reference Manual (typo)

	* gsignal.c (g_signal_newv): Fix a typo in the docs, pointed out
	by Andrew Feren

2008-11-03  Matthias Clasen <mclasen@redhat.com>

	Bug 555935 – Clear the mechanism of overwriting properties

	* gobject.c: Expand the docs of g_object_class_install_property.
	Proposed by Maciej Piechotka

2008-10-16  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.0 ===

2008-09-26  Dan Winship  <danw@gnome.org>

	* gobject.c (g_object_ref, g_object_unref)
	(g_object_freeze_notify, g_object_notify, g_object_thaw_notify):